@@ -1,3 +1,7 @@
+2008-05-29  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/nested-func-6.c: New test.
+
 2008-05-20  Adam Nemet  <anemet@caviumnetworks.com>
 
 	PR middle-end/36194
