@@ -1,3 +1,7 @@
+2008-05-29  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* tree-nested.c (check_for_nested_with_variably_modified): Fix typo.
+
 2008-05-23  Marius Strobl <marius@FreeBSD.org>
 
 	* gthr-posix.h (__gthread_active_p): Use the Solaris implementation
